common-applications/control/majun-source-credible-consisitency/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: majun-source-credible-consistency
  name: majun-source-credible-consistency
