common-applications/control/majun-source-credible-consisitency/source-credible-consistency-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: source-credible-consistency-service
  namespace: majun-source-credible-consistency
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8089
  selector:
    app: source-credible-consistency
  type: ClusterIP
