common-applications/control/majun-source-credible-consisitency/source-credible-consistency-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: nginx
  name: source-credible-consistency-ingress
  namespace: majun-source-credible-consistency
spec:
  rules:
  - host: source-clean.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: source-credible-consistency-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - source-clean.osinfra.cn
    secretName: source-credible-consistency-tls
